--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
-$home-image: url(../img/background.jpg);
+$home-image: url(../img/code.jpg);
 $background-opacity: 0.9;
 
 @mixin easeOut{
@@ -30,6 +30,17 @@ $background-opacity: 0.9;
         
     }
 }
+
+// Set Text Color
+@function set-text-color($color) {
+    @if (lightness($color) > 40) {
+        @return #000;
+    }
+    @else {
+        @return #fff;
+    }
+}
+
 
 // Media Query Mixins
 @mixin mediaSm {
