--- a/style.css
+++ b/style.css
@@ -103,9 +103,9 @@ nav .brand-logo img {
 
 
 #home {
-  background-image: url("img/background.jpg");
+  background-image: url("img/backgroundc.jpg");
   background-position: 100% 100%;
-  background-size: 100% 100%;
+  background-size: 100%;
   display: inline;
   float: left;
   height: 420px;
@@ -175,7 +175,6 @@ nav .brand-logo img {
 
 .about-inner{
   display: inline;
-  min-height: 300px;
   float: left;
   width: 100%;
 }
@@ -199,7 +198,6 @@ nav .brand-logo img {
 
 
 .about-inner-right{ 
-  min-height: 250px;
   display: inline;
   float: left;
   width: 100%;
@@ -467,7 +465,7 @@ nav .brand-logo img {
 
 .portfolio-top{
   display: inline;  
-  padding-top: 60px;
+  padding-top: 40px;
   float: left;
   width: 100%; 
 }
@@ -1843,7 +1841,8 @@ textarea.materialize-textarea {
 
 
 @media(max-width:1199px ){
-
+  .home-title {font-size: 40px;}
+  .home-inner {padding: 30px;}
   .custom-nav li a { padding: 25px 15px;}
   .prev {margin-top: 20%;}
   .next {margin-top: 20%;}
@@ -1860,7 +1859,6 @@ textarea.materialize-textarea {
 @media(max-width:991px ){
 
   .home-inner {padding: 30px;}
-  .home-title {font-size: 55px;}
   .call-to-about {bottom: -95px;}
   .resume-btn { margin-top: 30px;}
   .prev {margin-top: 28%;}
@@ -1923,7 +1921,7 @@ textarea.materialize-textarea {
 
 @media(max-width:480px ){
 
-  nav .brand-logo { font-size: 1.1rem; }
+  nav .brand-logo { font-size: 1.6rem; }
   nav .brand-logo img {height: 35px;margin-top: 12px;}
   .side-nav {width: 200px;}
   .side-nav a {height: 45px;line-height: 50px;}
@@ -2005,6 +2003,7 @@ textarea.materialize-textarea {
 @media(max-width:320px ){
 
   nav .brand-logo {  font-size: 1.1rem;}
+  .fas, .fab { font-size: 40px; }
   .home-title { font-size: 30px;}
   .experience-title { font-size: 14px;}
   .reveal-title {font-size: 17px !important;}
